# Editor

./: CMakeLists.txt  Doxyfile  README.md
cfg/: settings.cfg
docs/: annotated.html  annotated_dup.js  class_clipboard-members.html  class_clipboard.html  class_clipboard.js  class_editor-members.html  class_editor.html  class_editor.js  class_history-members.html  class_history.html  class_history.js  class_redo.html  classes.html  classfile_i_o-members.html  classfile_i_o.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  editor_8cpp.html  editor_8cpp.js  editor_8h.html  editor_8h.js  editor_8h_source.html  file_i_o_8cpp.html  file_i_o_8h.html  file_i_o_8h.js  file_i_o_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  navtreedata.js  navtreeindex0.js  redo_8cpp.html  redo_8h.html  (+9 more)
docs/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_8.js
src/: editor.cpp  editor.h  fileIO.cpp  fileIO.h  main.cpp  redo.cpp  redo.h
